--- a/Algorithms/算法第一周.md
+++ b/Algorithms/算法第一周.md
@@ -1,125 +1,83 @@
-## Dynamic Connectivity
-How many connected components result after performing the following sequence of union operations on a set of 1010 items?
 
-1–2 3–4 5–6 7–8 7–9 2–8 0–5 1–9
+A Visual Guide to Graph Traversal Algorithms - Interactive visualisations for learning how graph traversal algorithms work
+Algomation - A didactic, animated, exposition of algorithms.
+Algorithm Visualizer - Dozens of animated algorithms (with code), and you can also create your own.
+Algorithms Visualization - A dense article on Algorithms Visualization.
+Big-O Cheat Sheet - Big-O complexities of common algorithms used in Computer Science.
+Code-Drills - Practice problems recommender (includes Codeforces, Codechef and Spoj).
+Data Structure Visualizations - Visualize the behavior of Data Structures and play with its operations.
+Geeks for Geeks - Lots and lots of well explained and implemented algorithms.
+Path Finding - A visual representation on how algorithms such as A*, IDA*, Breadth-First-Search, Best-First-Search and others describe a path between two points A and B.
+Rosetta Code - A programming chrestomathy site which aims to present implementations of many algorithms and data structures in different programming languages.
+Sorting Algorithms - Nice and simple animations of sorting algorithms. With short codes and discussions.
+Stoimen's web log - Some algorithms nicely explained.
+The Sound of Sorting - The Sound of Sorting - "Audibilization" and Visualization of Sorting Algorithms
+VisuAlgo - Visualising data structures and algorithms through animation.
+Wikipedia - Algorithms - Of course!!
+Wikipedia - Data Structures - and why not ?!!
+Online Courses
+Free and High Quality Courses Online
 
-3
-正确 
-**The connected components are \{0, 5, 6\}{0,5,6}, \{3, 4\}{3,4}, and \{1, 2, 7, 8, 9\}{1,2,7,8,9}.
+Algorithms: Divide and Conquer, Sorting and Searching, and Randomized Algorithms - The primary topics are: asymptotic ("Big-oh") notation, sorting and searching, divide and conquer, and randomized algorithms.
+Algorithms: Graph Search, Shortest Paths, and Data Structures - The primary topics are: data structures, graph primitives, and their applications.
+Algorithms: Greedy Algorithms, Minimum Spanning Trees, and Dynamic Programming - The primary topics are: greedy algorithms and dynamic programming.
+Algorithms: Shortest Paths Revisited, NP-Complete Problems and What To Do About Them - The primary topics are: shortest paths, NP-completeness and what it means for the algorithm designer, and strategies for coping with computationally intractable problems.
+Algorithms, Part I - This course covers the essential information that every serious programmer needs to know about algorithms and data structures.Part I covers elementary data structures, sorting, and searching algorithms.
+Algorithms, Part II - Part II focuses on graph- and string-processing algorithms.
+Khan Academy Algorithms - Algorithm course ministred by Tomas Cormen and Devin Balkcom.
+MIT - 6-006 - Well explained algorithms.
+MIT - 6-046j - Similar to the previous one, but with different algorithms.
+MIT - 6-00sc - An easy and well explained introduction to algorithms.
+Udacity Intro to Algorithms - Python-based Algorithms course.
+Algorithms in Motion - Beginner's algorithms course with fun illustrations, based on the book Grokking Algorithms
+YogiBearian YouTube Channel - Lots of well explained vidoes on various computer science subjects. Account terminated due to violations of Youtube Policies.
+Books
+The most highly regarded books to learn algorithms
 
------------------------------------
-## Quick Find
-What is the maximum number of \verb#id[]#id[] array entries that can change (from one value to a different value) during one call to union when using the quick-find data structure 
-on nn elements?
-
-n - 1正确 
-In the worst case, all of the entries except \verb#id[q]#id[q] are changed from \verb#id[p]#id[p] to \verb#id[q]#id[q].
-
-------------------------------
-## Qucik Union
-1.Suppose that in a quick-union data structure on 10 elements that the \verb#id[]#id[] array is
-
-   i  |  0|  1|  2|  3|  4|  5|  6|  7|  8|  9
--|-|-|-|-|-|-|-|-|-
-id[i] |  0 | 9 | 6|  5|  4|  2|  6|  1|  0|  5
-
-
-Which are the roots of 3 and 7, respectively?
-
-6 and 6
-
-正确 
-The root of 33 is 66: \; 3 \rightarrow 5 \rightarrow 2 \rightarrow 6 3→5→2→6.
-
-The root of 77 is 66: \;7 \rightarrow 1 \rightarrow 9 \rightarrow 5 \rightarrow 2 \rightarrow6 7→1→9→5→2→6.
-
-2.What is the maximum number of array accesses during a find operation when using the quick-union data structure on nn elements?
-
-linear
-
-正确 
-See slide 27.
-
-## Weighted Quick Union
-Suppose that the \verb#id[]#id[] array during the weighted quick-union (by size) algorithm is given as below. Which \verb#id[]#id[] entry changes 
-when we apply the union operation to 33 and 66?
-
-\verb#id[8]#id[8]
-
-正确 
-In weighted quick-union (by size), we make the root of the smaller tree (in terms of the number of nodes) point to the root of the larger tree.
-So, in this example, the algorithm sets \verb#id[8] = 0#id[8]=0.
-
-## Union Find Application
-When opening one new site in the percolation simulation, how many times is union()union() called?
+Algorithm Design - Pretty straight-forward.
+Algorithms - Problems explained with Java, OO good practices, visualizations, and free online resources.
+Classic Computer Science Problems in Python -This great book presents dozens of coding challenges, ranging from simple tasks to clustering data using k-means.
+Data Structures Using C - The basic concepts and usages of data structures.
+Elementary Algorithms - An awesome book about algorithms and data structures.
+Grokking Algorithms - An illustrated book on algorithms with practical examples.
+Introduction to Algorithms - Essential!
+Swift Algorithms & Data Structures - A practical guide to concepts, theory and code.
+The Algorithm Design Manual - Easy to read and full of real world examples.
+The Art of Computer Programming - The Book.
+Structure and Interpretation of Computer Programs
+Github Libraries
+Implementations of the most classic algorithms in a wide variety of programming languages
 
 
-0, 1, 2, 3, or 4
+A2 Online Judge - Online Judge and problem archive.
+ACM-ICPC Live Archive - Hundreds of problems from previous ACM-ICPC Regionals and World Finals.
+AIZU ONLINE JUDGE - Japanese Online Judge.
+Algo Muse - Research based algorithmic problems.
+AtCoder - Japanese programming contest website.
+Baekjoon Online Judge - Korean Online Judge. 10000+ problems. Supports 60+ languages.
+CS Academy - Holds online contests and IOI practice contests
+CodeChef - More problems and monthly online contests.
+Codeforces - The only programming contests Web 2.0 platform
+Codefights - Practive programming and tackle out your next tech interview
+CodeMarshal - Real world contests online!
+CodeWars - A website that houses support to solve algorithms in many languages in varying difficulty.
+CoderByte - A decent website with algorithm challenges from beginner to advanced levels. Supports most of the popular languages like C++, python, javascript, ruby.
+Firecode- Firecode.io uses machine learning algorithms along with curated real-world interview questions, solutions & a vibrant social community of learners to get you ready for your next coding interview.
+HackerEarth - Practice alogrithmic problems & challenges and participate in hiring challenges.
+HackerRank - Featured algorithm and functional programming online judges
+HiHoCoder - Chinese and English problem solving practice and recruitment challenge site.
+Infoarena - Romanian Online Judge. 1500+ algorithmic problems
+Kattis- Online judge and problem archive
+LavidaOnlineJudge - Korean Online Judge(Half English). 1300+ problems.
+Learneroo Algorithms Tutorials - Learn and practice algorithms by solving challenges online.
+LeetCode - Learn algorithms and prepare for interviews.
+PKU JudgeOnline - Chinese Online Judge.
+ProjectEuler - Mathematical problems that can be solved using algorithms (or just a pencil, depends on how much you already know).
+Rosalind - A platform for learning bioinformatics and programming through problem solving.
+ShareCode.io - Online Judge and contest host with a lot of algorithmic problems in the archive to practice.
+Snakify - An introductory Python course with 100+ algorithmic problems and a step-by-step debugger (from Russia).
+SPOJ - More problems.
+TopCoder - Lots of problems and real world/money worthy problems in Graphic Design, Data Science and Development.
+URI - Brazilian Online Judge. Not so much problems, but it's growing and it has online contests.
+UVA - Hundreds of problems (from previous ACM-ICPC Regionals, World Finals and others).
 
-正确 
-It is called for each neighboring site that is already open. There are 4 possible neighbors, but some of them may not already be open
-
-# ALlgorithm Analysis
-
-Suppose that nn equals 1 million. Approximately how much faster is an algorithm that performs n \lg nnlgn operations versus one that performs n^2n 
-2
-  operations? Recall that \lglg is the base-2 logarithm function.
-
-50,000x
-
-正确 
-{n^2} \;/\; (n \lg n) \;=\; n \; /\; \lg n \;= n 
-2
- /(nlgn)=n/lgn= 1,000,000 / lg(1,000,000). Since 2^{20}2 
-20
-  is approximately 1 million, we obtain approximately 50,000.
-
-Suppose that you make the following observations of the running time T(n)T(n) (in seconds) of a program as a function of the input size nn. Which of the following functions best models the running time T(n)T(n)?
-
-n	T(n)
-1,000	0.0
-2,000	0.0
-4,000	0.1
-8,000	0.3
-16,000	1.3
-32,000	5.1
-64,000	20.5
-
-We assume T(n) = a \, n^bT(n)=an 
-b
-  for some constants aa and bb.
-
-As we double the input size nn, the running time approximately quadruples, indicating a quadratic algorithm or b = 2b=2. Plugging in T(64000) = 20.5T(64000)=20.5 and solving for aa, we obtain a = 20.5 / 64000^2 \approx 5.0 \times 10^{-9}a=20.5/64000 
-2
- ≈5.0×10 
-−9
- .
-
-How many array accesses does the following code fragment make as a function of nn?
-
-(Assume the compiler does not optimize away any array accesses in the innermost loop.)
-
-
-
-\sim 3n^2∼3n 
-2
- 
-
-
-\sim \frac{3}{2} n^2 \lg n∼ 
-2
-3
-​	 n 
-2
- lgn
-
-正确 
-Not all triple loops have cubic running times. For a given value of ii and jj, the kk-loop requires only 3 \lg n3lgn array access: the body is executed \lg nlgn times and each time involves 3 array accesses. As in the 2-SUM and 3-SUM analysis, the number of times the kk-loop is executed is {n \choose 2} \sim \frac{1}{2} n^2( 
-2
-n
-​	 )∼ 
-2
-1
-​	 n 
-2
- .
