--- a/Artificial-Intelligence/预训练模型.md
+++ b/Artificial-Intelligence/预训练模型.md
@@ -1,7 +1,9 @@
 [参考](https://www.analyticsvidhya.com/blog/2017/06/transfer-learning-the-art-of-fine-tuning-a-pre-trained-model)
 [知乎](https://zhuanlan.zhihu.com/p/27657264)
 
-[dl4j大全](https://github.com/deeplearning4j/deeplearning4j)
+[实践指南-深度学习】使用预训练模型](https://blog.csdn.net/u011240016/article/details/85217630)
+
+[dl4j模型大全](https://github.com/deeplearning4j/deeplearning4j)
 
 目录
 
