--- a/Books/江南小说全集.md
+++ b/Books/江南小说全集.md
@@ -1,31 +1,63 @@
 江南小说全集	作者	更新时间
+
 天王本生	江南	2017-09-20
+
 蝴蝶风暴	江南	2017-09-20
+
 涿鹿·炎的最后王孙	江南	2017-09-20
+
 此间的少年	江南	2017-09-20
+
 此间的少年3	江南	2017-09-20
+
 光明皇帝·业火	江南	2017-09-20
+
 光明皇帝·神杀	江南	2017-09-20
+
 此间的少年2	江南	2017-09-20
+
 荆棘王座	江南	2017-09-20
+
 龙族3黑月之潮	江南	2017-09-20
+
 龙族3黑月之潮中	江南	2017-09-20
+
 龙族哀悼之翼	江南	2017-09-20
+
 九州飘零书·商博良	江南	2017-09-20
+
 龙族2悼亡者之瞳	江南	2017-09-20
+
 龙族3黑月之潮下	江南	2017-09-20
+
 蝴蝶风暴2第二天国	江南	2017-09-20
+
 光明皇帝	江南	2017-09-20
+
 龙族3黑月之潮上	江南	2017-09-20
+
 龙族1火之晨曦	江南	2017-09-20
+
 龙族	江南	2017-09-20
+
 龙族4奥丁之渊	江南	2017-09-20
+
 九州·刺客王朝·莲	江南	2017-09-20
+
 九州·刺客王朝·葵	江南	2017-09-20
+
 九州往世书	江南	2017-09-20
+
 九州飘零书·商博良前传·归墟	江南	2017-09-20
+
 九州缥缈录	江南	2017-09-20
+
 九州捭阖录	江南	2017-09-20
+
 龙族5	江南	2017-09-20
+
 龙族5悼亡者的归来	江南	2017-09-20
 
+有着详细资料与设定的幻想世界，西方有知名的“龙与地下城”（d&d）系统。在这个世界设定上产生了经典名著《龙枪编年史》、游戏《魔法门》及《英雄无敌》等著名系列、《魔法风云会》（万智牌）卡牌游戏，以及影视作品无数。这个系统已成为西方幻想文化的代表之一。但在东方，尤其是中国，却一直没有一个真正设定严谨资料共享的幻想世界，大家各自为战地创作了无数故事，却如雨落平湖，击出一点涟漪便消失无踪了。或者新新封神榜，新新西游记，新新八仙，新新哪吒闹海，把古代神话一遍遍翻炒，直到面目全非索然无味。我们失去想像力和创新力了么？
+总要有人来做些什么。为了东方幻想文化的尊严也好，为了孩童般天真的虚妄也好。
+《九州》是一个梦想。是天空里的第一滴水，我们希望它能变成海洋。
