--- a/MachineLearning/查询生成词云项目参考.md
+++ b/MachineLearning/查询生成词云项目参考.md
@@ -1,3 +1,11 @@
 1.[python3爬取百度搜索结果url，获得真实url，提取网页正文并分词，多进程的使用](https://blog.csdn.net/u012249992/article/details/79525396)
 
 2.[编写Python脚本来获取Google搜索结果的示例](https://blog.csdn.net/junli_chen/article/details/52243987)
+
+3.[python3调用Google翻译](https://blog.csdn.net/Johline/article/details/72528941)
+
+
+
+
+
+
