--- a/Experience-and-Methods/知乎.md
+++ b/Experience-and-Methods/知乎.md
@@ -1,5 +1,22 @@
 [如何成为记忆高手](https://www.zhihu.com/question/27371173/answer/152263546)
 
-[
+[你见过哪些令你瞠目结舌的C/C++代码技巧？](https://www.zhihu.com/question/37692782/answer/74409370)
+
+[如何系统、科学地自学编程知识？](https://www.zhihu.com/question/20837356/answer/19660761)
+
+[有没有一段代码，让你觉得人类的智慧璀璨无比](https://www.zhihu.com/question/30262900/answer/48741026)
+
+[Python 的练手项目有哪些值得推荐？](https://www.zhihu.com/question/29372574/answer/88624507)
+
+[如何用一段简单的代码讲述一个悲伤的故事？](https://www.zhihu.com/question/39021759/answer/79744606)
+
+[自学 Python 之后如果不去公司上班，自己一个人可以通过此技能挣什么钱？](https://www.zhihu.com/question/270720694/answer/449769461)
+
+[计算机科学中有哪些典型的练手项目？](https://www.zhihu.com/question/29779842)
+
+[leetcode 中有哪些题的解法让你拍案叫绝？](https://www.zhihu.com/question/35485418/answer/63081850)
+
+[Leetcode 简略题解 - 共567题](https://zhuanlan.zhihu.com/p/25697275)
+
 
 
