--- a/Experience-and-Methods/知乎.md
+++ b/Experience-and-Methods/知乎.md
@@ -18,5 +18,18 @@
 
 [Leetcode 简略题解 - 共567题](https://zhuanlan.zhihu.com/p/25697275)
 
+[可以用 Python 编程语言做哪些神奇好玩的事情？](https://www.zhihu.com/question/21395276/answer/115805610)
+
+[如何快速成为数据分析师？](https://www.zhihu.com/question/29265587/answer/44010658)
+
+### [什么才算是真正的编程能力？](https://www.zhihu.com/question/31034164/answer/50423838)
+
+[在数据分析、挖掘方面，有哪些好书值得推荐？](https://www.zhihu.com/question/20757000/answer/16085651)
+
+[用Excel做出强大漂亮的数据地图](https://zhuanlan.zhihu.com/p/20756711)
+
+[如何在业余时学数据分析？](https://www.zhihu.com/question/22119753/answer/54320521)
+
+
 
 
