--- a/Experience-and-Methods/知乎.md
+++ b/Experience-and-Methods/知乎.md
@@ -30,6 +30,63 @@
 
 [如何在业余时学数据分析？](https://www.zhihu.com/question/22119753/answer/54320521)
 
+### [程序员必须掌握哪些算法？](https://www.zhihu.com/question/23148377/answer/36824071)
+
+[有哪些「神奇」的数据获取方式？](https://www.zhihu.com/question/32164316/answer/55000666)
+
+[有哪些网站用爬虫爬取能得到很有价值的数据？](https://www.zhihu.com/question/36132174/answer/70798699)
+
+[你都用 Python 来做什么？](https://www.zhihu.com/question/20799742)
+
+[为什么同样是解决一个问题，别人就能想出算法，而我却绞尽脑汁，百般尝试也不得其法？](https://www.zhihu.com/question/38331755)
+
+[觉得很有必要再次推荐编程自学界神文](https://zhuanlan.zhihu.com/p/30742986)
+
+[怎样正确地自学一门外语？](https://www.zhihu.com/question/22802468/answer/78652073)
+
+[利用爬虫技术能做到哪些很酷很有趣很有用的事情？](https://www.zhihu.com/question/27621722/answer/269085034)
+
+[156个Python网络爬虫资源，妈妈再也不用担心你找不到资源！](https://zhuanlan.zhihu.com/p/28407245)
+
+[自学成才的黑客（安全研究员）是从哪学到那些知识的？](https://www.zhihu.com/question/23073812/answer/23563575)
+
+[如何能在本科三年级就发表论文？](https://www.zhihu.com/question/21427261/answer/21102951)
+
+[有哪些东西你知道很便宜，但不知道居然那么便宜？](https://www.zhihu.com/question/66563844/answer/245328352)
+
+[你曾成功自学过哪些技能？有何经验之谈？](https://www.zhihu.com/question/27234576/answer/39692255)
+
+[作为程序员，你有哪些正在做的个人项目？](https://www.zhihu.com/question/64898551)
+
+[兴趣广泛而无一精擅是不是一种悲哀？](https://www.zhihu.com/question/20751255)
+
+[你都用 Python 来做什么？](https://www.zhihu.com/question/20799742/answer/293069677)
+
+[最令你惊艳的古诗或古文是什么？](https://www.zhihu.com/question/297636916/answer/518762307)
+
+[哪些 Python 库让你相见恨晚？](https://www.zhihu.com/question/24590883/answer/92420471)
+
+### [思维导图真的有效吗？](https://www.zhihu.com/question/20273625/answer/531743073)
+
+[如何系统地自学 Python？](https://www.zhihu.com/question/29138020/answer/72193349)
+
+[怎么样才算是精通 Python？](https://www.zhihu.com/question/19794855/answer/111320427)
+
+[如何学习数据结构？](https://www.zhihu.com/question/21318658/answer/42690576)
+
+[Python 有那么神吗？](https://www.zhihu.com/question/48429102/answer/474312170)
+
+[有哪些计算机生成的精美图形？](https://www.zhihu.com/question/19935130/answer/127706323)
+
+[即时战略游戏（比如 WAR3）的 AI 是怎样实现的？](https://www.zhihu.com/question/21090429/answer/44109092)
+
+[你见过哪些令你瞠目结舌的爬虫技巧？](https://www.zhihu.com/question/38192299/answer/125408708)
+
+[超强的学习能力是怎样练就的？](https://www.zhihu.com/question/35103080/answer/457627276)
+
+[有哪些 100 元以下，实用且贴心，用了之后相见恨晚甚至感动出泪的东西？](https://www.zhihu.com/question/27509931/answer/525272342)
+
+
 
 
 
