--- a/Experience-and-Methods/知乎.md
+++ b/Experience-and-Methods/知乎.md
@@ -86,7 +86,25 @@
 
 [有哪些 100 元以下，实用且贴心，用了之后相见恨晚甚至感动出泪的东西？](https://www.zhihu.com/question/27509931/answer/525272342)
 
+[练手|常见26种深度学习模型的实现](https://zhuanlan.zhihu.com/p/51331280)
 
+[练手|常见30种NLP任务的练手项目](https://zhuanlan.zhihu.com/p/51279338)
 
+[最全的资源搜索平台汇总，秒变资源帝](https://zhuanlan.zhihu.com/p/34657151)
 
+[英语听力反复听坚持下去真的能提高么？](https://www.zhihu.com/question/25869262/answer/546879043)
+
+[大家都是如何刷 LeetCode 的？](https://www.zhihu.com/question/280279208/answer/553161466)
+
+[你用 Python 写过哪些有趣的脚本？](https://www.zhihu.com/question/28661987)
+
+[零基础想系统地学习金融学、量化投资、数据分析、python，需要哪些课程、书籍？有哪些证书可以考？](https://www.zhihu.com/question/305879541/answer/555229802)
+
+[男生怎么护肤，有哪些护肤品值得推荐？](https://www.zhihu.com/question/22239539/answer/271910143)
+
+[在校男学生如何才能穿搭得低调又优雅呢？](https://www.zhihu.com/question/36359987/answer/82689157)
+
+[男生穿搭丨最强攻略](https://zhuanlan.zhihu.com/p/26507839)
+
+[进攻即是最好的防御！19个练习黑客技术的在线网站](https://zhuanlan.zhihu.com/p/24624347)
 
