--- a/Experience-and-Methods/知乎.md
+++ b/Experience-and-Methods/知乎.md
@@ -108,3 +108,22 @@
 
 [进攻即是最好的防御！19个练习黑客技术的在线网站](https://zhuanlan.zhihu.com/p/24624347)
 
+[我花了一个星期，整理了100个超强神器网站](https://zhuanlan.zhihu.com/p/57682925)
+
+[年改六次，高二学生撰写Selenium中文文档](https://zhuanlan.zhihu.com/p/56427307)
+
+[不出国如何练就一口流利的英语？](https://www.zhihu.com/question/22968875/answer/507923505)
+
+[你用过的最让你震惊的网站有哪些？为什么？](https://www.zhihu.com/question/20030360/answer/619422910)
+
+[有哪些道理是你毕业多年后才明白的？](https://www.zhihu.com/question/313622793/answer/610942435)
+
+[杂谈】GitHub上有哪些好用的爬虫(从Google百度，腾讯视频抖音，豆瓣知乎到不可描述)](https://zhuanlan.zhihu.com/p/61289585)
+
+[GitHub+Hexo 搭建个人网站详细教程](https://zhuanlan.zhihu.com/p/26625249)
+
+### [哪些 Python 库让你相见恨晚？](https://www.zhihu.com/question/24590883/answer/709395848)
+
+
+
+
